[package]
name = "amazing-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
chrono = "0.4"
nom = "7.1"
binrw = "0.12"
log = "0.4"
env_logger = "0.10"
hex-literal = "0.4"
num_enum = "0.7"
bitvec = "1.0"
